banner section added

--- a/style/style.css
+++ b/style/style.css
@@ -29,8 +29,55 @@
 
 /* Banner section start */
     .banner-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
         background-image: url('../assets/Hero-bg.png');
-        width: 1440px;
-        height: 652px;
+        max-width: 1440px;
+        max-height: 652px;
+    }
+
+    .banner-container img {
+        max-width: 240px;
+        max-height: 240px;
+        margin-top: 26px;
+        margin-bottom: 32px;
+    }
+
+    .banner-container h1 {
+        max-width: 998px;
+        max-height: 136px;
+        font-family: "Azeret Mono", monospace;
+        font-size: 40px;
+        font-weight: 800;
+        letter-spacing: 0%;
+        color: var(--black-color);
+        text-align: center;
+    }
+
+    .banner-container p {
+        max-width: 852px;
+        max-height: 52px;
+        font-family: "Azeret Mono", monospace;
+        font-size: 16px;
+        font-weight: 400;
+        letter-spacing: 0%;
+        opacity: 0.7;
+        margin-top: 24px;
+        margin-bottom: 32px;
+        text-align: center;
+    }
+
+    .banner-container button {
+        font-family: "Azeret Mono", monospace;
+        font-size: 20px;
+        font-weight: 600;
+        letter-spacing: 0%;
+        margin-bottom: 44px;
+        color: var(--white-color);
+        background-color: var(--black-color);
+        padding: 21px 24px;
+        border-radius: 8px;
     }
 /* Banner section end */
