--- a/style/root.css
+++ b/style/root.css
@@ -11,5 +11,25 @@
 }
 
 main {
-
+    max-width: 1140px;
+    margin: 0 auto;
 }
+
+.text-heading {
+    font-family: "Azeret Mono", monospace;
+    font-size: 32px;
+    font-weight: 800;
+    letter-spacing: 0%;
+    text-align: center;
+    color: var(--black-color);
+}
+
+.text-description {
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0%;
+    opacity: 0.7;
+    color: var(--black-color);
+}
+
