--- a/style/style.css
+++ b/style/style.css
@@ -28,56 +28,120 @@
 /* Nav section end */
 
 /* Banner section start */
-    .banner-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        background-image: url('../assets/Hero-bg.png');
-        max-width: 1440px;
-        max-height: 652px;
-    }
+.banner-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-image: url('../assets/Hero-bg.png');
+    max-width: 1440px;
+    max-height: 652px;
+}
 
-    .banner-container img {
-        max-width: 240px;
-        max-height: 240px;
-        margin-top: 26px;
-        margin-bottom: 32px;
-    }
+.banner-container img {
+    max-width: 240px;
+    max-height: 240px;
+    margin-top: 26px;
+    margin-bottom: 32px;
+}
 
-    .banner-container h1 {
-        max-width: 998px;
-        max-height: 136px;
-        font-family: "Azeret Mono", monospace;
-        font-size: 40px;
-        font-weight: 800;
-        letter-spacing: 0%;
-        color: var(--black-color);
-        text-align: center;
-    }
+.banner-container h1 {
+    max-width: 998px;
+    max-height: 136px;
+    font-family: "Azeret Mono", monospace;
+    font-size: 40px;
+    font-weight: 800;
+    letter-spacing: 0%;
+    color: var(--black-color);
+    text-align: center;
+}
 
-    .banner-container p {
-        max-width: 852px;
-        max-height: 52px;
-        font-family: "Azeret Mono", monospace;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0%;
-        opacity: 0.7;
-        margin-top: 24px;
-        margin-bottom: 32px;
-        text-align: center;
-    }
+.banner-container p {
+    max-width: 852px;
+    max-height: 52px;
+    margin-top: 24px;
+    margin-bottom: 32px;
+    text-align: center;
+}
 
-    .banner-container button {
-        font-family: "Azeret Mono", monospace;
-        font-size: 20px;
-        font-weight: 600;
-        letter-spacing: 0%;
-        margin-bottom: 44px;
-        color: var(--white-color);
-        background-color: var(--black-color);
-        padding: 21px 24px;
-        border-radius: 8px;
-    }
+.banner-container button {
+    margin-bottom: 44px;
+    background-color: var(--black-color);
+    border-radius: 8px;
+    padding: 21px 24px;
+}
+
+.banner-container button a {
+    font-family: "Azeret Mono", monospace;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0%;
+    color: var(--white-color);
+    text-decoration: none;
+}
 /* Banner section end */
+
+/* Why Web Development? section start */
+.why-web {
+    width: 100%;
+    height: 1550px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    margin: 74px 0px 88px 0px;
+}
+
+.why-web-heading-container {
+    padding-top: 80px;
+    max-width: 852px;
+    max-height: 115px;
+    margin: 0 auto;
+}
+
+.why-web-heading-container p {
+    text-align: center;
+    margin-top: 24px;
+}
+
+.why-web-img-heading-description {
+    max-width: 850px;
+    height: 300px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 32px;
+    padding: 48px;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+
+.why-web-img-text-heading {
+    font-family: "Azeret Mono", monospace;
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: 0%;
+    color: var(--black-color);
+    opacity: 0.7;
+}
+
+.why-web-heading-description {
+    max-width: 477px;
+    max-height: 220px;
+}
+
+.why-web-heading-description p {
+    margin-top: 16px;
+}
+
+.why-web-heading-description button {
+    font-family: "Azeret Mono", monospace;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0%;
+    color: var(--black-color);
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.7);
+    opacity: 0.7;
+    margin-top: 32px;
+}
+/* Why Web Development? section end */
