--- a/style/style.css
+++ b/style/style.css
@@ -134,16 +134,20 @@
 }
 
 .why-web-heading-description button {
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.7);
+    margin-top: 32px;
+}
+
+.why-web-heading-description button a {
     font-family: "Azeret Mono", monospace;
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 0%;
     color: var(--black-color);
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 1px solid rgba(13, 19, 33, 0.7);
     opacity: 0.7;
-    margin-top: 32px;
+    text-decoration: none;
 }
 /* Why Web Development? section end */
 
